<resources>
    <string name="app_name">LastOrders</string>
    <string name="login">Login</string>
    <string name="barsaround">Bars Around You</string>
    <!-- options -->
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="action_settings">Settings</string>
    <string name="sortrating">Sort By Rating Or Distance</string>
    <string name="webViewSee">Web View See</string>
    <string name="logoutMeOut">Log Out</string>
    <string name="refrsh_the_data">Refresh</string>
    <string name="serviceBegin">Start Json Service</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="change_map">Change Map View</string>

    <!-- Toasts -->
    <string name="task_saved_message">Task has been saved</string>
    <string name="task_reset">All Fields have been reset</string>

    <string name="task_returned">Returning to Main Screen</string>


    <string name="itemPicked">list item selected was </string>


    <!--menu -->
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>

    <string name="title_activity_boo_yeah">booYeah</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_how_no">HowNo</string>


    <string name="server_is_down">Server is down!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_first_view">FirstView</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="Items">
        <item>Profile</item>
        <item>View All Bars</item>
        <item>Events</item>
        <item>Logout</item>

    </string-array>
    <string name="title_activity_maps">Map</string>

    <string name="sortingbydistanec">Sort By Distance</string>
    <string name="sortingbyrating">Sort By Rating</string>

    <!-- Facebook API key-->
    <string name="facebook_app_id">1284442688250838</string>

</resources>
